# nana

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  dev.sh  feat_integrate_emphasis.md  pyproject.toml
.beads/: issues.jsonl
.claude/skills/: playwright-testing.md
.claude/skills/playwright-testing/: SKILL.md
.claude/skills/quality/: SKILL.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  debug.py  main.py  schemas.py
backend/app/routers/: debug.py  emphasis.py  inline_commands.py  notes.py  upload.py  upload_stream.py
backend/app/services/: __init__.py  pdf_extract.py  pdf_preprocess.py
backend/prompts/: document_overview.md  integrate_emphasis.md  notes_generation.md  quiz_generation.md
backend/prompts/inline_commands/: elaborate.md  simplify.md
backend/tests/: test_notes.py  test_pdf_preprocess.py
docs/: NANA (Not Another Note App).md  implementation_plan.md  playwright_testing.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ApiKeyInput.tsx  ConfirmationModal.tsx  EmphasisBox.tsx  ExpansionBlock.tsx  GenerationProgress.tsx  HelpModal.tsx  ImportWarningModal.tsx  MarkdownRenderer.tsx  MermaidDiagram.tsx  NotesPanel.tsx  OverviewPanel.tsx  PDFViewer.tsx  ResizeDivider.tsx  SearchBar.tsx  SelectionToolbar.tsx  StorageWarning.tsx  ThemeToggle.tsx  Toast.tsx  ToastProvider.tsx
frontend/src/hooks/: useNavigationGuard.ts  useResizablePanes.ts  useSearch.ts  useTextSelection.ts  useToast.ts
frontend/src/pages/: StudyPage.tsx  UploadPage.tsx
frontend/src/stores/: apiKeyStore.ts  index.ts  pdfStore.ts  searchStore.ts  themeStore.ts  userStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: contentHash.ts  exportMarkdown.ts  importMarkdown.ts  index.ts  pdfTextExtraction.ts
prompts/: notes_generation.md  quiz_generation.md
prompts/inline_commands/: analogy.md  diagram.md  elaborate.md  simplify.md
